Fixing correct guess message z-index.

--- a/frontend/src/components/gamefield/Gamefield.css
+++ b/frontend/src/components/gamefield/Gamefield.css
@@ -146,7 +146,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 10000000000000;
     background-color: #1f2937;
     padding: 20px 40px;
     border-radius: 10px;
